# docs/swagger.yaml
@@ -1,6 +1,37 @@
 info:
   contact: {}
 paths:
+  /admin/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: loginName
+        in: formData
+        name: loginName
+        required: true
+        type: string
+      - description: password
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: json
+      summary: Backstage login
+  /backstage/user/create:
+    post:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: json
+      summary: Backstage UserLogin
   /carousel/list:
     get:
       responses:
@@ -17,14 +48,6 @@ paths:
           schema:
             type: json
       summary: Category
-  /create/password:
-    get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: json
-      summary: Backstage UserLogin
   /forestage/config:
     get:
       responses:
@@ -33,20 +56,6 @@ paths:
           schema:
             type: json
       summary: Forestage config
-  /password/check/{pwd}:
-    get:
-      parameters:
-      - description: pwd
-        in: path
-        name: pwd
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: json
-      summary: Backstage check password
   /production/{id}:
     get:
       operationId: "1"
